# aiohappyeyeballs

./: .all-contributorsrc  .copier-answers.yml  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.py
.github/: FUNDING.yml
.github/workflows/: ci-cd.yml  poetry-upgrade.yml
docs/: api_reference.rst  conf.py  index.md  installation.md  usage.md
src/aiohappyeyeballs/: __init__.py  _staggered.py  impl.py  staggered.py  types.py  utils.py
tests/: conftest.py  test_base_events.py  test_eager_task_factory.py  test_events.py  test_impl.py  test_impl_uvloop.py  test_init.py  test_main.py  test_staggered.py  test_staggered_cpython.py  test_staggered_cpython_eager_task_factory.py  test_types.py  test_utils.py
tests/benchmarks/: __init__.py  _data.py  test_interleave.py  test_reorder_utils.py
